--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MediaPipe Client</title>
+    <style>
+      #image_list img,
+      #image_list canvas {
+        max-width: calc(min(100%, 256px));
+        max-height: calc(min(100dvh, 256px));
+      }
+    </style>
   </head>
   <body>
     <h1>MediaPipe Client</h1>
     <p>This client is controlled by nodejs via playwright</p>
+    <div id="image_list"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
